Fix color contrast issue raised by validator

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,11 +252,18 @@ nav {    /* contains logo & nav menu */
 }
 
 [data-prize] {
+    background-color: var(--clr-dark-sea);
+    box-shadow: 0 0 3px 2px var(--clr-deep-moss);
+    box-sizing: border-box;
+    width: 70%;
+    text-align: center;
+    border-radius: 10px;
     font-family: 'Roboto Slab', serif;
     font-size: 1.5rem;
     margin: .2rem 0;
     position: relative;
     color: var(--clr-raisin-black);
+    opacity: .8;
 }
 
 .highlight-prize {    /* highlight for cash prizes */
@@ -268,6 +275,7 @@ nav {    /* contains logo & nav menu */
     min-width: 70%;
     text-align: center;
     padding: 0 1rem;
+    opacity: 1;
 }
 
 .star {
@@ -1260,6 +1268,7 @@ nav {    /* contains logo & nav menu */
         font-size: 1.2rem;
         font-weight: 600;
         margin: 0;
+        width: 75%;
     }
 
     .highlight-prize {
